svn merge -r 8711:8813 svn://chef/branch/alpine/network-settings
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@8830 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/openvpn/hier/usr/share/metavize/openvpn/eg-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/eg-template.html
@@ -185,7 +185,7 @@ hr {
                   <table style="border: 1px; padding: 1px">
                     <tbody>
                       <tr>
-                        <td style="text-align: right"><b>Server IP Address:</b></td>
+                        <td style="text-align: right"><b>Server Address:</b></td>
                         <td>%%ADDRESS%%</td>
                       </tr>
 
