text: remove word LDAP from portal dialog look: make openvpn email not be busted ugly... metalized the background text: spelling fix in openvpn dialog
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9569 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
@@ -6,11 +6,14 @@
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
   <style type="text/css">
-body {
-    margin: 15px;
-    background: #E2E2E2;
-    text-align: center;
-}
+
+      body {
+        margin: 20px 20px 20px 20px;
+        padding: 0px;
+        background: #FFFFFF url(http://www.untangle.com/mail_blast/reports/images/background_body.gif) repeat-x top left;
+        text-align: center;
+      }
+
 
 table {
     font: normal normal normal 10pt/14pt Arial,Sans-Serif;
@@ -90,28 +93,41 @@ h4 {
 #table_main_center {
 }
 
+/* the following pertain to the main content (i.e. the main 'metal-brushed') table */
+#table_main_center {
+    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_center.gif) repeat;
+}
+
 #table_main_top {
+    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_top.gif) repeat-x;
 }
 
 #table_main_top_left {
+    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_left.gif) no-repeat;
 }
 
 #table_main_top_right {
+    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_right.gif) no-repeat;
 }
 
 #table_main_right {
+    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_right.gif) repeat-y;
 }
 
 #table_main_bottom {
+    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_bottom.gif) repeat-x;
 }
 
 #table_main_bottom_left {
+    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_left.gif) no-repeat;
 }
 
 #table_main_bottom_right {
+    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_right.gif) no-repeat;
 }
 
 #table_main_left {
+    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_left.gif) repeat-y;
 }
 
 hr {
@@ -124,20 +140,15 @@ hr {
 <body>
 
 <center>
-<table border="0" cellpadding="0" cellspacing="0" width="904">
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
 
 <!-- TOP THIRD -->
   <tbody>
-    <tr>
-      <td id="table_main_top_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-      
-      <td id="table_main_top" width="100%"><img src="images/spacer.gif" alt=" " height="1" width="1"/><br/>
-
-      </td>
-
-      <td id="table_main_top_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
+            <tr>
+              <td id="table_main_top_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
+              <td id="table_main_top" width="100%"><img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
+              <td id="table_main_top_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
+            </tr>
     </tr>
 
     <!-- END TOP THIRD -->
@@ -179,8 +190,9 @@ hr {
       <td id="table_main_center" style="padding: 8px 0px 0px;">
 
         <hr size="1" width="100%"/>
-        <table style="padding: 1px; text-align: left; margin-left: auto; margin-right: auto; width: 480px; border: 1px;" border="0"><tbody><tr><td>
-          <table style="padding: 10px 40px 10px 40px;">
+        <center>
+        <table style="padding: 1px; text-align: left; margin-left: auto; margin-right: auto; border: 0px;" border="0"><tbody><tr><td>
+          <table style="padding: 10px 0px 10px 0px;">
             <tbody>              
               <tr>
                 <td valign="top" class="page_sub_text">
@@ -199,6 +211,7 @@ hr {
             </tbody>
           </table>
           </td></tr></tbody></table>
+          </center>
           <hr size="1" width="100%"/>
 
         </td>
@@ -209,13 +222,9 @@ hr {
     
     <!-- BOTTOM THIRD -->
     <tr>
-      <td id="table_main_bottom_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-
-      <td id="table_main_bottom"><img src="images/spacer.gif" alt=" " height="1" width="1"/><br/>
-      </td>
-      <td id="table_main_bottom_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
+      <td id="table_main_bottom_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
+      <td id="table_main_bottom"><img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
+      <td id="table_main_bottom_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
     </tr>
     <!-- END BOTTOM THIRD -->
   </tbody>
