--- a/tran/reporting/hier/usr/share/metavize/reporting/email.html
+++ b/tran/reporting/hier/usr/share/metavize/reporting/email.html
@@ -4,7 +4,7 @@
   <head>
 
     <!-- HEADING -->
-    <title>Untangle %%REPORT_TYPE%% Report</title>
+    <title>%%COMPANY_NAME%% %%REPORT_TYPE%% Report</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
     <style type="text/css">
@@ -153,7 +153,7 @@
                   <tr>
                     <td valign="middle" width="150">
                       <a href="http://www.untangle.com">
-                        <img src="http://www.untangle.com/mail_blast/reports/images/Logo150x96.gif" border="0" alt="Untangle logo"/>
+                        <img src="http://www.untangle.com/mail_blast/reports/images/BrandingLogo.gif" border="0" alt="%%COMPANY_NAME%%"/>
                       </a>
                     </td>
 
