Fix for bug 2797
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10359 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/openvpn/hier/usr/share/metavize/openvpn/eg-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/eg-template.html
@@ -147,8 +147,8 @@ hr {
           <tbody>
             <tr>
               <td valign="middle" width="150">
-                <a href="http://www.untangle.com">
-                  <img src="images/Logo150x96.gif" border="0" alt="Untangle logo"/>
+                <a href="%%COMPANY_URI%%">
+                  <img src="images/logo.gif" border="0" alt="%%COMPANY%% Logo"/>
 
                 </a>
               </td>
@@ -180,8 +180,8 @@ hr {
 
               <tr>
                 <td valign="top" >
-                  <div class="page_sub_title">Untangle OpenVPN Client</div><br/>
-                  Please input the following information into the "Vpn Client" wizard.
+                  <div class="page_sub_title">OpenVPN Client</div><br/>
+                  Please input the following information into the "VPN Client" wizard.
                   <table style="border: 1px; padding: 1px">
                     <tbody>
                       <tr>
