--- a/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
@@ -144,11 +144,10 @@ hr {
 
 <!-- TOP THIRD -->
   <tbody>
-            <tr>
-              <td id="table_main_top_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
-              <td id="table_main_top" width="100%"><img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
-              <td id="table_main_top_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
-            </tr>
+    <tr>
+      <td id="table_main_top_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
+      <td id="table_main_top" width="100%"><img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
+      <td id="table_main_top_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/></td>
     </tr>
 
     <!-- END TOP THIRD -->
@@ -163,8 +162,8 @@ hr {
           <tbody>
             <tr>
               <td valign="middle" width="150">
-                <a href="http://www.untangle.com">
-                  <img src="images/Logo150x96.gif" border="0" alt="Untangle logo"/>
+                <a href="http://%%COMPANY_URI%%">
+                  <img src="images/logo.gif" border="0" alt="%%COMPANY%% Logo"/>
 
                 </a>
               </td>
