Fixed some  more CSS weirdness ... quotes around color definitions, wtf?
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@10363 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
@@ -103,8 +103,8 @@ h4 {
     background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_left.gif) repeat-y;
 }
 hr {
-	color: "#969696";
-	background-color: "#969696";
+	color: #969696;
+	background-color: #969696;
 }
 </style>
 </head>
