--- a/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
+++ b/tran/openvpn/hier/usr/share/metavize/openvpn/mail-template.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <style type="text/css">
 body {
-	margin: 20px;
-	padding: 0;
+	margin: 0;
+	padding: 20px;
 	background: #fff url(http://www.untangle.com/mail_blast/reports/images/background_body.gif) repeat-x top left;
 	text-align: center;
 }
@@ -71,9 +71,8 @@ h4 {
     margin: 0;
     padding: 0;
 }
-/* the following pertain to the main content (i.e. the main 'metal-brushed') table */
 .table_main_center {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_center.gif) repeat;
+    background: #fff url(http://www.untangle.com/mail_blast/reports/images/background_table_main_center.gif) repeat;
 }
 .table_main_top {
     background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_top.gif) repeat-x;
@@ -108,15 +107,13 @@ hr {
 <body>
 <center>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-<!-- TOP THIRD -->
   <tbody>
     <tr>
       <td class="table_main_top_left"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
       <td class="table_main_top" width="100%"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
       <td class="table_main_top_right"> <img src="images/spacer.gif" alt="" height="23" width="23" /></td>
     </tr>
-    <!-- END TOP THIRD -->
-    <!-- MIDDLE THIRD -->
+
     <tr>
       <td class="table_main_left"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
       <td class="table_main_center">
@@ -137,12 +134,11 @@ hr {
       </td>
       <td class="table_main_right"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
     </tr>
-    <!-- END MIDDLE THIRD --><!-- CONTENT AREA -->
+
     <tr>    
       <td class="table_main_left"></td>
-      <!-- CENTER CELL --> 
       <td class="table_main_center" style="padding: 8px 0 0;">
-        <hr size="1" width="100%"/>
+        <hr size="1" width="100%" />
         <center>
         <table style="padding: 1px; text-align: left; margin-left: auto; margin-right: auto; border: 0;" border="0"><tbody><tr><td>
           <table style="padding: 10px 0 10px 0;">
@@ -166,21 +162,17 @@ hr {
           </center>
           <hr size="1" width="100%" />
         </td>
-      <!-- END CENTER CELL -->
       <td class="table_main_right"></td>
     </tr>
-    <!-- END CONTENT AREA -->    
-    <!-- BOTTOM THIRD -->
+
     <tr>
       <td class="table_main_bottom_left"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
       <td class="table_main_bottom"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
       <td class="table_main_bottom_right"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
     </tr>
-    <!-- END BOTTOM THIRD -->
   </tbody>
 </table>
 </center>
-<!-- END BRUSHED METAL PAGE BACKGROUND -->
 </body>
 </html>
 
