Use branding logo from right file, correct company URI to be correct
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11748 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
@@ -121,8 +121,8 @@ hr {
           <tbody>
             <tr>
               <td valign="middle" width="150">
-                <a href="http://%%COMPANY_URI%%">
-                  <img src="images/logo.gif" border="0" alt="%%COMPANY%% Logo" />
+                <a href="%%COMPANY_URI%%">
+                  <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY%%" />
                 </a>
               </td>              
               <td style="padding: 0 0 0 10px;" class="page_header_title" align="left" valign="middle">
