get rid of extra 'logo.gif', use BrandingLogo.gif instead
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11749 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
@@ -148,7 +148,7 @@ hr {
             <tr>
               <td valign="middle" width="150">
                 <a href="%%COMPANY_URI%%">
-                  <img src="images/logo.gif" border="0" alt="%%COMPANY%% Logo"/>
+                  <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY%%"/>
 
                 </a>
               </td>
