correct reporting branding
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11750 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/reporting/hier/usr/share/untangle/reporting/email.html
+++ b/reporting/hier/usr/share/untangle/reporting/email.html
@@ -152,8 +152,8 @@
                 <tbody>
                   <tr>
                     <td valign="middle" width="150">
-                      <a href="http://www.untangle.com">
-                        <img src="http://www.untangle.com/mail_blast/reports/images/BrandingLogo.gif" border="0" alt="%%COMPANY_NAME%%"/>
+                      <a href="%%COMPANY_URL%%">
+                        <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY_NAME%%"/>
                       </a>
                     </td>
 
