--- a/uvm-lib/servlets/webui/root/test.html
+++ b/uvm-lib/servlets/webui/root/test.html
@@ -1,29 +1,73 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-        <title>Test dojox.Grid Basic</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
-<style type="text/css">
-</style>
-<script type="text/javascript">
-	function test_innerHTML() {
-		document.getElementById("test").innerHTML="";
-		var out=[];
-		for(var i=0;i<2000; i++) {
-			var top=Math.floor(Math.random()*650);
-			var left=Math.floor(Math.random()*1100);
-			out.push('<div style="position:absolute;background-color:red;width:2px;height:2px;top:'+top+'px;left:'+left+'px;"></div>')
-		}
-		document.getElementById("test").innerHTML=out.join('');
-		setTimeout('test_innerHTML()',5);
-	}
-	function init() {
-		test_innerHTML();
-	}
-</script>
+   
+    <style type="text/css">
+        @import "/webui/ext-2.0/resources/css/ext-all.css";
+        @import "/webui/untangle.css";
+    </style>
+<!--
+	<script type="text/javascript" src="/webui/ext-2.0/source/core/Ext.js"></script>
+	<script type="text/javascript" src="/webui/ext-2.0/source/adapter/ext-base.js"></script>
+	<script type="text/javascript" src="/webui/ext-2.0/ext-all-debug.js"></script>
+-->
+	<script type="text/javascript" src="/webui/ext-2.0/adapter/ext/ext-base.js"></script>
+
+	<script type="text/javascript" src="/webui/ext-2.0/ext-all.js"></script>
+    <script type="text/javascript" src="/webui/ext-2.0/script/graphics.js"></script>
+    <script type="text/javascript" src="/webui/ext-2.0/script/ext-untangle.js"></script>
+<script src="/jabsorb/jsonrpc-min.js" type="text/javascript"></script>
 </head>
-<body onload="init();">
-<div id="test"></div>
+<body>
+<div id="editor-grid"></div>
+<script type="text/javascript">
+jsonrpc = new JSONRpcClient("/jabsorb/JSON-RPC");
+
+// Call a Java method on the server
+var result = jsonrpc.RemoteUvmContext.getActivationKey();
+document.write("your activation key is" + result + "<br />");
+
+
+var nm = jsonrpc.RemoteUvmContext.nodeManager();
+//document.write("nodeManager is" + nm.javaClass);
+//var nc = jsonrpc.RemoteUvmContext.nodeManager.nodeContext(1);
+//document.write("nodeContext 1 is " + nc.javaClass);
+var a=jsonrpc.RemoteUvmContext.nodeManager().nodeInstances('untangle-node-protofilter')
+var nc=nm.nodeContext(a.list[0])
+var n=nc.node()
+var s=n.getProtoFilterSettings()
+var pl = s.patterns.list.length;
+
+//for (var i=0; i < pl; i++) {
+//  document.write("log: " + s.patterns.list[i].log + " protocol " + s.patterns.list[i].protocol + "<br />")
+//}
+
+
+var Pattern = Ext.data.Record.create([ { name: 'log' }, {name: 'protocol'} ]);
+
+var reader = new Ext.data.JsonReader({root: "rows"}, Pattern);
+
+var grid = new Ext.grid.GridPanel({
+    store: new Ext.data.Store({
+        reader: reader,
+        data: { rows: s.patterns.list }
+    }),
+    columns: [
+        {header: "Log", width: 100, dataIndex: 'log'},
+        {header: "Protocol", width: 200, sortable: true, dataIndex: 'protocol'}
+    ],
+    viewConfig: {
+        forceFit: true
+    },
+    sm: new Ext.grid.RowSelectionModel({singleSelect:true}),
+    width:600,
+    height:300,
+    frame:true,
+    title:'ProtoFilter',
+    iconCls:'icon-grid',
+    renderTo:'editor-grid'
+});
+
+</script>
 
 </body>
 </html>
