Refactor generated emails
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@18286 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/reporting/hier/usr/share/untangle/reporting/email.html
+++ b/reporting/hier/usr/share/untangle/reporting/email.html
@@ -1,212 +1,12 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html>
   <head>
-
-    <!-- HEADING -->
-    <title>%%COMPANY_NAME%% %%REPORT_TYPE%% Report</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
-
-    <style type="text/css">
-      body {
-        margin: 20px 20px 20px 20px;
-        padding: 0px;
-        background: #FFFFFF url(http://www.untangle.com/mail_blast/reports/images/background_body.gif) repeat-x top left;
-        text-align: center;
-      }
-
-      table {
-        font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-        text-align: left;
-        color: #606060;
-      }
-
-      input {
-        font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-        text-align: left;
-        color: #606060;
-      }
-
-      form {
-        margin: 0px;
-      }
-
-      a:link, a:visited {
-        font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-        color: #1997FE;
-        text-decoration: none;
-      }
-
-      a:hover {
-        color: #1997FE;
-        text-decoration: underline;
-      }
-
-      .page_header_title {
-        font: bold normal normal 25pt Arial,Sans-Serif;
-        color: #777777;
-      }
-
-      .page_sub_title {
-        font: bold normal normal 17pt Arial,Sans-Serif;
-        color: #777777;
-      }
-
-      h1 {
-        font: normal normal bold 11pt Arial,Sans-Serif;
-        color: #999999;
-        letter-spacing: 1px;
-        margin: 0px;
-        padding: 0px;
-      }
-
-      h2 {
-        font: normal normal bold 10pt Arial,Sans-Serif;
-        color: #999999;
-        letter-spacing: 1px;
-        margin: 0px;
-        padding: 0px;
-      }
-
-      h3 {
-        font: normal normal bold 11pt Arial,Sans-Serif;
-        color: #606060;
-        letter-spacing: 1px;
-        margin: 0px;
-        padding: 0px;
-      }
-
-      h4 {
-        font: normal normal bold 14pt Arial,Sans-Serif;
-        color: #0044D7;
-        letter-spacing: 1px;
-        margin: 0px;
-        padding: 0px;
-      }
-
-/* the following pertain to the main content (i.e. the main 'metal-brushed') table */
-#table_main_center {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_center.gif) repeat;
-}
-
-#table_main_top {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_top.gif) repeat-x;
-}
-
-#table_main_top_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_left.gif) no-repeat;
-}
-
-#table_main_top_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_right.gif) no-repeat;
-}
-
-#table_main_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_right.gif) repeat-y;
-}
-
-#table_main_bottom {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_bottom.gif) repeat-x;
-}
-
-#table_main_bottom_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_left.gif) no-repeat;
-}
-
-#table_main_bottom_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_right.gif) no-repeat;
-}
-
-#table_main_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_left.gif) repeat-y;
-}
-
-
-      hr {
-        color: "#969696";
-        background-color: "#969696";
-      }
-    </style>
-
+    <title>%%REPORT_TYPE%% Report</title>
   </head>
   <body>
 
-    <center>
-      <table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <h3>%%REPORT_TYPE%% Report</h3>
 
-        <!-- TOP THIRD -->
-        <tbody>
-            <tr>
-              <td id="table_main_top_left"><img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="23" width="23"/></td>
+    This report is attached as a PDF file. It requires Adobe Acrobat Reader to view.
 
-              <td id="table_main_top" width="100%"><img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="1" width="1"/></td>
-
-              <td id="table_main_top_right"> <img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="23" width="23"/></td>
-            </tr>
-
-          <!-- MIDDLE THIRD -->
-          <tr>
-            <td id="table_main_left"><img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="1" width="1"/></td>
-            <td id="table_main_center">
-              <table width="100%">
-                <tbody>
-                  <tr>
-                    <td valign="middle" width="150">
-                      <a href="%%COMPANY_URL%%">
-                        <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY_NAME%%"/>
-                      </a>
-                    </td>
-
-                    <td style="padding: 0px 0px 0px 10px;" class="page_header_title"
-                        align="left" valign="middle">
-                      %%REPORT_TYPE%% Report
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-            <td id="table_main_right"> <img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="1" width="1"/></td>
-          </tr>
-
-          <!-- END MIDDLE THIRD --><!-- CONTENT AREA -->
-          <tr>
-            <td id="table_main_left"></td>
-            <!-- CENTER CELL -->
-            <td id="table_main_center" style="padding: 8px 0px 0px;">
-
-              <hr size="1" color="#969696" width="100%"/>
-              <center>
-                <table style="padding: 10px 40px 10px 40px;">
-                  <tbody>
-                    <tr>
-                      <td valign="top" >
-                        This report is attached as a PDF file.<br/>
-                        It requires Acrobat&reg; Reader&reg; to view.<br/>
-                      </td>
-                    </tr>
-
-                  </tbody>
-                </table>
-                </center>
-              <hr size="1" color="#969696" width="100%"/>
-
-            </td>
-            <td id="table_main_right"></td>
-            <!-- END CENTER CELL -->
-          </tr>
-          <!-- END CONTENT AREA -->
-
-          <!-- START BOTTOM THIRD -->
-          <tr>
-            <td id="table_main_bottom_left"><img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="23" width="23"/></td>
-            <td id="table_main_bottom"><img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="1" width="1"/></td>
-            <td id="table_main_bottom_right"> <img src="http://www.untangle.com/mail_blast/reports/images/spacer.gif" alt=" " height="23" width="23"/></td>
-          </tr>
-          <!-- END BOTTOM THIRD -->
-        </tbody>
-      </table>
-
-    </center>
   </body>
 </html>
-
