--- a/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
@@ -1,178 +1,19 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>OpenVPN</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<style type="text/css">
-body {
-	margin: 0;
-	padding: 20px;
-	background: #fff url(http://www.untangle.com/mail_blast/reports/images/background_body.gif) repeat-x top left;
-	text-align: center;
-}
-table {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    text-align: left;
-    color: #606060;
-}
-input {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    text-align: left;
-    color: #606060;
-}
-form {
-    margin: 0;
-}
-a:link, a:visited {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    color: #1997FE;
-    text-decoration: none;
-}
-a:hover {
-    color: #1997FE;
-    text-decoration: underline;
-}
-.page_header_title {
-    font: bold normal normal 25pt Arial,Sans-Serif;
-    color: #777;
-}
-.page_sub_title {
-    font: bold normal normal 17pt Arial,Sans-Serif;
-    color: #777;
-}
-.page_sub_text {
-    font: bold normal normal 14pt Arial,Sans-Serif;
-    color: #777;
-}
-h1 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
-    color: #999;
-    letter-spacing: 1px;
-    margin: 0;
-    padding: 0;
-}
-h2 {
-    font: normal normal bold 10pt Arial,Sans-Serif;
-    color: #999;
-    letter-spacing: 1px;
-    margin: 0;
-    padding: 0;
-}
-h3 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
-    color: #606060;
-    letter-spacing: 1px;
-    margin: 0;
-    padding: 0;
-}
-h4 {
-    font: normal normal bold 14pt Arial,Sans-Serif;
-    color: #0044D7;
-    letter-spacing: 1px;
-    margin: 0;
-    padding: 0;
-}
-.table_main_center {
-    background: #fff url(http://www.untangle.com/mail_blast/reports/images/background_table_main_center.gif) repeat;
-}
-.table_main_top {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_top.gif) repeat-x;
-}
-.table_main_top_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_left.gif) no-repeat;
-}
-.table_main_top_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_top_right.gif) no-repeat;
-}
-.table_main_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_right.gif) repeat-y;
-}
-.table_main_bottom {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_bottom.gif) repeat-x;
-}
-.table_main_bottom_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_left.gif) no-repeat;
-}
-.table_main_bottom_right {
-    background: url(http://www.untangle.com/mail_blast/reports/images/rounded_corner_main_bottom_right.gif) no-repeat;
-}
-.table_main_left {
-    background: url(http://www.untangle.com/mail_blast/reports/images/background_table_main_left.gif) repeat-y;
-}
-hr {
-	color: #969696;
-	background-color: #969696;
-}
-</style>
-</head>
-<body>
-<center>
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-  <tbody>
-    <tr>
-      <td class="table_main_top_left"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
-      <td class="table_main_top" width="100%"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
-      <td class="table_main_top_right"> <img src="images/spacer.gif" alt="" height="23" width="23" /></td>
-    </tr>
+<html>
+  <head>
+    <title>OpenVPN</title>
+  </head>
+  <body>
 
-    <tr>
-      <td class="table_main_left"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
-      <td class="table_main_center">
-        <table width="100%">
-          <tbody>
-            <tr>
-              <td valign="middle" width="150">
-                <a href="%%COMPANY_URI%%">
-                  <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY%%" />
-                </a>
-              </td>              
-              <td style="padding: 0 0 0 10px;" class="page_header_title" align="left" valign="middle">
-                OpenVPN<br />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </td>
-      <td class="table_main_right"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
-    </tr>
+    <h3>OpenVPN</h3>
 
-    <tr>    
-      <td class="table_main_left"></td>
-      <td class="table_main_center" style="padding: 8px 0 0;">
-        <hr size="1" width="100%" />
-        <center>
-        <table style="padding: 1px; text-align: left; margin-left: auto; margin-right: auto; border: 0;" border="0"><tbody><tr><td>
-          <table style="padding: 10px 0 10px 0;">
-            <tbody>              
-              <tr>
-                <td valign="top" class="page_sub_text">
-                  <a href="https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%">
-                    Click here to download the OpenVPN client.
-                  </a>
-                </td>
-              </tr>              
-              <tr>
-                <td valign="top">
-                  Or copy and paste the following link into your Web Browser.<br />
-                  <b><code>https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%</code></b>
-                </td>
-              </tr>            
-            </tbody>
-          </table>
-          </td></tr></tbody></table>
-          </center>
-          <hr size="1" width="100%" />
-        </td>
-      <td class="table_main_right"></td>
-    </tr>
+    <a href="https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%">
+      Click here to download the OpenVPN client. 
+    </a>
+    <br/>
+    Or copy and paste the following link into your Web Browser.
+    <br/>
+    <b><code>https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%</code></b>
 
-    <tr>
-      <td class="table_main_bottom_left"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
-      <td class="table_main_bottom"><img src="images/spacer.gif" alt="" height="1" width="1" /></td>
-      <td class="table_main_bottom_right"><img src="images/spacer.gif" alt="" height="23" width="23" /></td>
-    </tr>
-  </tbody>
-</table>
-</center>
-</body>
+  </body>
 </html>
 
