Updating openvpn to allow for direct downloads and uploading the configuration for site configuration.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@19509 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
@@ -1,231 +1,16 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html>
+  <head>
+    <title>OpenVPN</title>
+  </head>
+  <body>
 
-<!-- HEADING -->
-  <title>OpenVPN</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <h3>OpenVPN</h3>
 
-  <style type="text/css">
-body {
-    margin: 15px;
-    background: #E2E2E2;
-    text-align: center;
-}
+    Please input the following information into the "VPN Client" wizard.
+    <br/>
+    <b>Server Address:</b><i>%%ADDRESS%%</i>
+    <br/>
 
-table {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    text-align: left;
-    color: #606060;
-}
-
-input {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    text-align: left;
-    color: #606060;
-}
-
-form {
-    margin: 0px;
-}
-
-a:link, a:visited {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    color: #1997FE;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #1997FE;
-    text-decoration: underline;
-}
-
-.page_header_title {
-    font: bold normal normal 25pt Arial,Sans-Serif;
-    color: #777777;
-}
-
-.page_sub_title {
-    font: bold normal normal 17pt Arial,Sans-Serif;
-    color: #777777;
-}
-
-h1 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
-    color: #999999;
-    letter-spacing: 1px;
-    margin: 0px;
-    padding: 0px;
-}
-
-h2 {
-    font: normal normal bold 10pt Arial,Sans-Serif;
-    color: #999999;
-    letter-spacing: 1px;
-    margin: 0px;
-    padding: 0px;
-}
-
-h3 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
-    color: #606060;
-    letter-spacing: 1px;
-    margin: 0px;
-    padding: 0px;
-}
-
-h4 {
-    font: normal normal bold 14pt Arial,Sans-Serif;
-    color: #0044D7;
-    letter-spacing: 1px;
-    margin: 0px;
-    padding: 0px;
-}
-
-/* the following pertain to the main content (i.e. the main 'metal-brushed') table */
-#table_main_center {
-}
-
-#table_main_top {
-}
-
-#table_main_top_left {
-}
-
-#table_main_top_right {
-}
-
-#table_main_right {
-}
-
-#table_main_bottom {
-}
-
-#table_main_bottom_left {
-}
-
-#table_main_bottom_right {
-}
-
-#table_main_left {
-}
-
-hr {
-     color: "#969696";
-     background-color: "#969696";
-}
-  </style>
-
-</head>
-<body>
-
-<center>
-<table border="0" cellpadding="0" cellspacing="0" width="904">
-
-<!-- TOP THIRD -->
-  <tbody>
-    <tr>
-      <td id="table_main_top_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-
-      <td id="table_main_top" width="100%"><img src="images/spacer.gif" alt=" " height="1" width="1"/><br/>
-
-      </td>
-
-      <td id="table_main_top_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-    </tr>
-
-    <!-- END TOP THIRD -->
-
-    <!-- MIDDLE THIRD -->
-    <tr>
-
-      <td id="table_main_left"><img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
-
-      <td id="table_main_center">
-        <table width="100%">
-          <tbody>
-            <tr>
-              <td valign="middle" width="150">
-                <a href="%%COMPANY_URI%%">
-                  <img src="images/BrandingLogo.gif" border="0" alt="%%COMPANY%%"/>
-
-                </a>
-              </td>
-
-              <td style="padding: 0px 0px 0px 10px;" class="page_header_title" align="left" valign="middle">
-                OpenVPN<br/>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-      </td>
-
-      <td id="table_main_right"> <img src="images/spacer.gif" alt=" " height="1" width="1"/></td>
-    </tr>
-
-    <!-- END MIDDLE THIRD --><!-- CONTENT AREA -->
-    <tr>
-
-      <td id="table_main_left"></td>
-
-      <!-- CENTER CELL -->
-      <td id="table_main_center" style="padding: 8px 0px 0px;">
-
-        <hr size="1" width="100%"/>
-        <table style="padding: 1px; text-align: left; margin-left: auto; margin-right: auto; width: 480px; border: 1px;" border="0"><tbody><tr><td>
-          <table style="padding: 10px 40px 10px 40px;">
-            <tbody>
-
-              <tr>
-                <td valign="top" >
-                  <div class="page_sub_title">OpenVPN Client</div><br/>
-                  Please input the following information into the "VPN Client" wizard.
-                  <table style="border: 1px; padding: 1px">
-                    <tbody>
-                      <tr>
-                        <td style="text-align: right"><b>Server Address:</b></td>
-                        <td>%%ADDRESS%%</td>
-                      </tr>
-
-                      <tr>
-                        <td style="text-align: right"><b>Passphrase:</b></td>
-                        <td>%%KEY%%</td>
-                      </tr>
-                    </tbody>
-                    </table>
-                </td>
-              </tr>
-
-            </tbody>
-          </table>
-          </td></tr></tbody></table>
-          <hr size="1" width="100%"/>
-
-        </td>
-      <!-- END CENTER CELL -->
-      <td id="table_main_right"></td>
-    </tr>
-    <!-- END CONTENT AREA -->
-
-    <!-- BOTTOM THIRD -->
-    <tr>
-      <td id="table_main_bottom_left"><img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-
-      <td id="table_main_bottom"><img src="images/spacer.gif" alt=" " height="1" width="1"/><br/>
-      </td>
-      <td id="table_main_bottom_right"> <img src="images/spacer.gif" alt=" " height="23" width="23"/><br/>
-      </td>
-    </tr>
-    <!-- END BOTTOM THIRD -->
-  </tbody>
-</table>
-
-</center>
-
-<!-- END BRUSHED METAL PAGE BACKGROUND -->
-</body>
+    <b>Passphrase:</b><i>%%KEY%%</i>
+  </body>
 </html>
-
