i18n OpenVPN emails Comment: #5530
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20813 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/eg-template.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <title>OpenVPN</title>
+    <title>%%TITLE%%</title>
   </head>
   <body>
 
-    <h3>OpenVPN</h3>
+    <h3>%%TITLE%%</h3>
 
-    Please input the following information into the "VPN Client" wizard.
+      %%MSG_BODY_1%% 
     <br/>
-    <b>Server Address:</b><i>%%ADDRESS%%</i>
+    <b>%%MSG_BODY_2%%</b><i>%%ADDRESS%%</i>
     <br/>
 
-    <b>Passphrase:</b><i>%%KEY%%</i>
+    <b>%%MSG_BODY_3%%</b><i>%%KEY%%</i>
   </body>
 </html>
