--- a/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
+++ b/openvpn/hier/usr/share/untangle/openvpn/mail-template.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <title>OpenVPN</title>
+    <title>%%TITLE%%</title>
   </head>
   <body>
 
-    <h3>OpenVPN</h3>
+    <h3>%%TITLE%%</h3>
 
     <a href="https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%">
-      Click here to download the OpenVPN client. 
+      %%MSG_BODY_1%% 
     </a>
     <br/>
-    Or copy and paste the following link into your Web Browser.
+      %%MSG_BODY_2%% 
     <br/>
     <b><code>https://%%ADDRESS%%/openvpn/download.html?key=%%KEY%%</code></b>
 
